Address generation almost working

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -2,3 +2,4 @@ token: "telegramtokenhere"
 db: "databaseurl"
 blockexplorer: "http://explorer.cubicversecoin.org/tx/"
 coinname: "CubicverseCoin"
+coindaemon: ""
