--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,5 +1,5 @@
 token: "telegramtokenhere"
-db: "databaseurl"
+db: "mysql2://username:password@localhost/database"
 blockexplorer: "http://explorer.cubicversecoin.org/tx/"
 coinname: "CubicverseCoin"
-coindaemon: ""
+coindaemon: "http://user:password@127.0.0.1:8332"
