--- a/config.yaml.example
+++ b/config.yaml.example
@@ -2,4 +2,6 @@ token: "telegramtokenhere"
 db: "mysql2://username:password@localhost/database"
 blockexplorer: "http://explorer.cubicversecoin.org/tx/"
 coinname: "CubicverseCoin"
+cointicker: "BTC"
+addressprefix: "C"
 coindaemon: "http://user:password@127.0.0.1:8332"
